<resources>
    <string name="app_name">2048</string>
    <string name="version">v1.3.a19</string>
    <string name="author">Ban Rossyn</string>

  <!--app_id-->
  <string name="app_id" translatable="false">980724941365</string>
  <!--package_name-->
  <string name="package_name" translatable="false">com.banrossyn.merge2048</string>

    <string name="Googleplay_games_App_ID">980724941365</string>
    <string name="leaderboard_id">CgkI7s33mJkPEAIQAg</string>
    <string name="my_achievement_id">CgkI7s33mJkPEAIQAQ</string>

    <string name="App_ID">ca-app-pub-4577382853353362~9438470771</string>
    <string name="BannerAd">ca-app-pub-4577382853353362/3288733304</string>
    <string name="InterstitialAd">ca-app-pub-4577382853353362/23033333798</string>

    <string name="moregamesurl">https://play.google.com/store/apps/dev?id=5306067645342206751</string>


	 <string name="header" >2048</string>
    <string name="high_score">HIGH SCORE</string>
    <string name="score">SCORE</string>
    <string name="instructionsone" > </string>
    <string name="instructionstwo" > </string>
    <string name="instructionsthree" > </string>
    <string name="you_win">You Win!</string>
    <string name="game_over">Game Over!</string>
    <string name="go_on">Tap to Continue</string>
    <string name="for_now">For now…</string>
    <string name="endless">"Endless" Mode</string>

    <!-- Confirmation dialog-->
    <string name="reset">Reset</string>
    <string name="continue_game">Cancel</string>
    <string name="reset_dialog_title">Reset game?</string>
    <string name="reset_dialog_message">Are you sure you wish to reset the game?</string>

    <string name="startai" >OpenAI</string>
    <string name="startai_dialog_title" >OpenAi?</string>
    <string name="startai_dialog_message" >Are you sure you Open AI the game?</string>








    <string name="game_over_title">Game Over</string>
    <string name="mode_classic">Classic</string>
    <string name="mode_blocks">Blocks</string>
    <string name="mode_shuffle">Shuffle</string>
    <string name="mode_exp_classic">The good old classic 2048</string>
    <string name="mode_exp_blocks">Random blocks will spawn in your board</string>
    <string name="mode_exp_shuffle">"Your board knows how to Shuffle!! "</string>
    <string name="exponent_exp_2">Try to get the \n2048 Tile!</string>
    <string name="exponent_exp_3">Try to get the \n177,147 Tile!</string>
    <string name="exponent_exp_4">Try to get the \n4,194,304 Tile!</string>
    <string name="exponent_exp_5">Try to get the \n48,828,125 Tile!</string>
    <string name="start">Start!</string>
    <string name="end_tutorial">End Tutorial</string>
    <string name="shuffle">Shuffle!</string>
    <string name="new_game">New Game</string>
    <string name="Score_board">Score Board</string>
    <string name="choose_game_mode">Choose Game Mode</string>
    <string name="choose_board_size">Choose Board Size</string>
    <string name="square">Square</string>
    <string name="rectangle">Rectangle</string>
    <string name="choose_exponent">Choose\nExponent</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="play">Play!</string>
    <string name="next">Next</string>
    <string name="settings">Settings</string>
    <string name="music">Music</string>
    <string name="sound">Sound</string>
    <string name="close">Close</string>
    <string name="your_score">your score</string>
    <string name="play_again">Play Again</string>
    <string name="how_to_play">How to Play</string>
    <string name="best_score">Best :</string>
    <string name="winner">Winner!!!</string>
    <string name="new_score">New Score!!!</string>
    <string name="tutorial_first_line">How to play:\nSwipe Up , Down , left , right to Move the Tiles Across the Board</string>
    <string name="tutorial_second_line">GOOD!! \nTwo Identical Tiles will Merge when they Collide, Try to Merge the Tiles</string>
    <string name="tutorial_third_line">Perfect!!\nContinue to Merge the Tiles and Try to get a Higher Score!</string>
    <string name="textfrist">Join the numbers and reach the 2048 tile! Supports small (3x3),(3x4),(3x5),\nclassic (4x4),(4x5) large (5x5),(5x6), and Huge (6x6),board sizes. Be ready for a new challenge!</string>
    <string name="textsecond">Super 2048 Plus puzzle Keep playing for high score after\ncollected 2048 tile Game is automatically saved and continue to play later.\nBeautiful, simple and classic design.</string>
    <string name="textthird">Block Tiles in Game. click and swipe sound with Background music</string>
    <string name="textforth">High score and leaderboard for different board sizes.\nCompletely native implementation. Play on any part of the screen.\nClassic game play with silky-smooth movements Swipe to move Undo button to reverse a swipe Detailed statistics including best scores Always free with no purchase required Official version of the original puzzle game</string>
    <string name="textfive">HOW TO PLAY: Swipe (up, down, left or right) to move the tiles.\nWhen two tiles with the same number touch, they merge into one. When a 2048 tile is created,\n the player wins! 8 .. 16 .. 128 .. 1024 .. 2048.</string>
    <string name="textsix">Short Descripation: 2048 is played on a plain 4×4 grid,\nconsisting of numbered tiles that slide when a player moves them using the four arrow keys. On each turn,\na new tile randomly appears on an empty spot on the board with a value of 2 or 4.\nThe tiles slide as far as possible in the chosen direction until they are stopped by another tile or the edge of the grid.\nIf two tiles of the same number collide while moving, they will merge into one tile with the total value of the two tiles colliding.\nThe resulting tile cannot merge with any other tile in the same move again. High scoring tiles emit a soft glow;\nThe highest possible tile is 131,072. If a move causes three consecutive tiles of the same value to move simultaneously,\nonly the two tiles that are farthest in the direction of motion will combine.\nIf all four spaces in a row or column are filled with tiles of the same value, a move parallel to that row/column will add the first two and\nthe last two. A scoreboard in the top right keeps track of the user\'s score. The user\'s score starts at zero,\nand increases by the value of the new tile each time two tiles meet. The game is won when a tile with the value 2048\nappears on the board. Players can go beyond this and reach higher scores. When the player has no legal moves\n (there are no spaces and no adjacent tiles with the same value), the game ends.</string>
    <string name="about">About</string>
    <string name="games">SIGN IN</string>
    <string name="more_games">more games</string>
    <string name="signin_other_error">Signin Error</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>