<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@drawable/game_background_light"
    android:backgroundTint="@color/background_tint"
    android:backgroundTintMode="multiply">


    <RelativeLayout
        android:id="@+id/btn_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp"
        android:paddingVertical="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:elevation="20dp"
            android:src="@drawable/logopng"
            app:layout_constraintBottom_toTopOf="@+id/btn_Simple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_Simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/rectangle_dark_blue"
            android:elevation="20dp"
            android:padding="10dp"
            android:text="Simple"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_Classic"
            app:layout_constraintEnd_toEndOf="@+id/app_logo"
            app:layout_constraintStart_toStartOf="@+id/app_logo"
            app:layout_constraintTop_toBottomOf="@+id/app_logo" />

        <Button
            android:id="@+id/btn_Classic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/rectangle_sky_blue"
            android:elevation="20dp"
            android:padding="10dp"
            android:text="Classic"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_Advance"
            app:layout_constraintEnd_toEndOf="@+id/btn_Simple"
            app:layout_constraintStart_toStartOf="@+id/btn_Simple"
            app:layout_constraintTop_toBottomOf="@+id/btn_Simple" />

        <Button
            android:id="@+id/btn_Advance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/rectangle_yellow"
            android:elevation="20dp"
            android:padding="10dp"
            android:text="Advance"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_how_to_play"
            app:layout_constraintEnd_toEndOf="@+id/btn_Classic"
            app:layout_constraintStart_toStartOf="@+id/btn_Classic"
            app:layout_constraintTop_toBottomOf="@+id/btn_Classic" />

        <Button
            android:id="@+id/btn_how_to_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/rectangle_pink"
            android:elevation="20dp"
            android:padding="10dp"
        android:text="@string/how_to_play"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_About"
            app:layout_constraintEnd_toEndOf="@+id/btn_Advance"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btn_Advance"
            app:layout_constraintTop_toBottomOf="@+id/btn_Advance" />

        <Button
            android:id="@+id/btn_About"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/rectangle_red"
            android:elevation="20dp"
            android:padding="10dp"
            android:text="@string/about"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_moregames"
            app:layout_constraintEnd_toEndOf="@+id/btn_how_to_play"
            app:layout_constraintStart_toStartOf="@+id/btn_how_to_play"
            app:layout_constraintTop_toBottomOf="@+id/btn_how_to_play" />

        <Button
            android:id="@+id/btn_moregames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/rectangle_brown"
            android:elevation="20dp"
            android:padding="10dp"
            android:text="@string/more_games"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_About" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</RelativeLayout>