<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_background_light"
    android:backgroundTint="@color/background_tint"
    android:backgroundTintMode="multiply"
    tools:context=".org.GameActivity">



    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/game_button_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/menu_relative">


                <ImageButton
                    android:id="@+id/ib_reset"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/round_white"
                    android:src="@drawable/reset_icon"
                    android:paddingHorizontal="7dp"
                    android:layout_marginHorizontal="10dp" />

                <ImageButton
                    android:id="@+id/ib_undo"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/round_white"
                    android:src="@drawable/undo_icon"
                    android:paddingHorizontal="7dp"
                android:layout_marginHorizontal="10dp" />
                <ImageButton
                    android:id="@+id/btn_Score_board"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_pink"
                    android:src="@drawable/icon_trophy_white"
                    android:paddingHorizontal="7dp"
                    android:layout_marginHorizontal="10dp"/>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/menu_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="3dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/menu_best_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/ib_home"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_back"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/black_text" />
                    <TextView
                        android:id="@+id/best"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="3dp"
                        android:text="@string/best_score"
                        android:textColor="@color/black_text"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/best_score_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="5dp"
                        android:gravity="center_vertical"
                        android:minEms="3"
                        android:padding="5dp"
                        android:textColor="@color/black_text"
                        android:textSize="25sp" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/current_score_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/menu_best_line"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:autoSizeTextType="uniform"
                    android:maxLines="1"
                    android:padding="3dp"
                    android:text="@string/start"
                    android:textAlignment="center"
                    android:textColor="@color/black_text"
                    android:textSize="35sp"
                    android:textStyle="italic"
                    tools:ignore="UnusedAttribute" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/gameview_relative_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_above="@id/game_button_bar"
                android:layout_below="@id/menu_relative"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_button_bar"
                android:layout_marginBottom="100dp">

                <LinearLayout
                    android:id="@+id/game_liner_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/cell_shape"
                    android:backgroundTint="#7557534F"
                    android:backgroundTintMode="multiply"
                    tools:ignore="UselessParent">

                    <com.banrossyn.merge2048.org.GameCode.GameViewCell
                        android:id="@+id/game_view_cell"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

            </RelativeLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/background_dark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E62B2B2B"
            android:orientation="vertical"
            android:visibility="gone"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/announcing_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/shuffle"
            android:textAlignment="center"
            android:textColor="@color/value2"
            android:textSize="30sp"
            android:visibility="gone"
     />

        <TextView
            android:id="@+id/tutorial_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:paddingHorizontal="15dp"
            android:textAlignment="center"
            android:textColor="@color/value2"
            android:textSize="25sp"
            android:visibility="gone"
      />

        <Button
            android:id="@+id/button_end_tutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/rectangle_sky_blue"
            android:gravity="center"

            android:paddingLeft="20dp"
            android:paddingVertical="7dp"
            android:paddingRight="20dp"
            android:text="@string/end_tutorial"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:visibility="gone"
         />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
